--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,17 +1,4 @@
-<header class="top-header">
-  <div class="container">
-    <nav class="navbar justify-content-between">
-      <a class="navbar-brand" href="/dashboard">Blog Dashboard</a>
-      <a class="navbar-brand" href="/post-blog">Create Blog</a>
-      <div>
-        <span class="me-4">Hello {{ fullName }}!</span>
-        <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logOut()">
-          Sign Out
-        </button>
-      </div>
-    </nav>
-  </div>
-</header>
+<app-navbar></app-navbar>
 <section class="card-bg">
   <div class="container pt-5">
     <div class="row">
