--- a/src/app/Components/post-blog/post-blog.component.scss
+++ b/src/app/Components/post-blog/post-blog.component.scss
@@ -1,73 +1,78 @@
-.outer{
-    height: 120vh;
+.panel-heading {
+  text-align: center;
+  margin-bottom: 38px;
 }
-.panel-heading{
-    text-align: center;
-    margin-bottom: 10px;
+#forget {
+  min-width: 100px;
+  margin-left: auto;
+  text-decoration: none;
+  cursor: pointer;
 }
-#forget{
-    min-width: 100px;
-    margin-left: auto;
-    text-decoration: none;
-    cursor: pointer;
+a:hover {
+  text-decoration: none;
 }
-a:hover{
-    text-decoration: none;
+.form-inline label {
+  padding-left: 10px;
+  margin: 0;
+  cursor: pointer;
 }
-.form-inline label{
-    padding-left: 10px;
-    margin: 0;
-    cursor: pointer;
+.btn {
+  margin-top: 20px;
+  // border-radius: 15px;
 }
-.btn{
-    margin-top: 20px;
-    // border-radius: 15px;
+.panel {
+  min-height: 300px;
+  box-shadow: 20px 20px 80px rgb(218, 218, 218);
+  // border-radius: 12px;
+  margin-top: 35px;
 }
-.panel{
-    min-height: 300px;
-    box-shadow: 20px 20px 80px rgb(218, 218, 218);
-    // border-radius: 12px;
-    margin-top: 35px;
+.input-field {
+  border-radius: 5px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid #ddd;
+  color: #4343ff;
 }
-.input-field{
-    border-radius: 5px;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    border: 1px solid #ddd;
-    color: #4343ff;
+.input-field.error {
+  border: 1px solid red;
+  color: red;
 }
-.input-field.error{
-    border: 1px solid red;
-    color: red;
+input[type="text"],
+input[type="password"] {
+  border: none;
+  outline: none;
+  box-shadow: none;
+  width: 100%;
 }
-input[type='text'],
-input[type='password']{
-    border: none;
-    outline: none;
-    box-shadow: none;
-    width: 100%
+.fa-eye-slash.btn {
+  border: none;
+  outline: none;
+  box-shadow: none;
 }
-.fa-eye-slash.btn{
-    border: none;
-    outline: none;
-    box-shadow: none;
+img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  // border-radius: 50%;
+  position: relative;
 }
-img{
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
-    // border-radius: 50%;
-    position: relative;
-}
-.post-blog-form{
-    .input-field{
-        textarea{
-            width: 100%;
-            height: 100%;
-            border: none;
-            resize: none;
-        }
+.post-blog-form {
+  .input-field {
+    textarea {
+      width: 100%;
+      height: 100%;
+      border: none;
+      resize: none;
     }
+  }
+}
+.card-bg {
+  background: rgb(238, 174, 202);
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
 }
