--- a/src/app/Components/read-blog/read-blog.component.html
+++ b/src/app/Components/read-blog/read-blog.component.html
@@ -1,30 +1,63 @@
-<div class="container">
+<app-navbar></app-navbar>
+<section class="card-bg">
+  <div class="container">
     <div class="row">
       <div class="col">
         <div class="card cardMarging">
-            
-          <div class="card-body ">
-            <h5 class="card-title d-flex justify-content-between">{{ blogObject.title }}
-                <div>
-                    <a [routerLink]="['/view', blogObject.id]">Edit Blog</a>
-                    </div>
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-between">
+              {{ blogObject.title }}
+              <div>
+                <a [routerLink]="['/view', blogObject.id]">Edit Blog</a>
+              </div>
             </h5>
             <p class="card-text">{{ blogObject.summary }}</p>
             <p class="card-text">{{ blogObject.content }}</p>
-            <p class="card-text"><strong>Created By : </strong><i>{{ blogObject.author }}</i></p>
-            
-            <div class="border border-secondary rounded border-style">
+            <p class="card-text">
+              <strong>Created By : </strong><i>{{ blogObject.author }}</i
+              ><br />
+              <strong>Created At : </strong
+              ><i>{{ blogObject.publishDate | date : "short" }}</i
+              ><br />
+              <strong>Last Updated At : </strong
+              ><i>{{ blogObject.updatedDate | date : "short" }}</i
+              ><br />
+            </p>
+
+            <div class="border-style">
               <form [formGroup]="commentForm">
-                <div >
-                    <textarea type="text" placeholder="Add Your Comment Here!" formControlName="comment" cols="165"></textarea>
+                <div>
+                  <textarea
+                    type="text"
+                    placeholder="Add Your Comment Here!"
+                    formControlName="comment"
+                    cols="165"
+                  ></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block" [disabled]="commentForm.invalid" (click)="commentSubmit()">Comment</button>
-               </form>
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-block"
+                  [disabled]="commentForm.invalid"
+                  (click)="commentSubmit()"
+                >
+                  Comment
+                </button>
+              </form>
             </div>
-            <span>Comments</span>
-            <div class="border border-secondary rounded border-style comment-block">
-              <div *ngFor="let comment of displaycommentObject" class="border border-secondary rounded border-style">
-                <li class="list-item">{{comment.comment}}</li>
+            <h3>Comments</h3>
+            <div
+              class="border border-secondary rounded border-style comment-block anyClass"
+            >
+            <span *ngIf="displaycommentObject.length==0"><i>Be the first one to comment your thoughts!</i></span>
+              <div
+                *ngFor="let comment of displaycommentObject"
+                class="border-bottom border-secondary border-style"
+              > 
+                <li class="list-item d-flex justify-content-between">
+                 <span> {{ comment.comment }}</span>
+                  <span>{{ comment.userName }} <small> {{ comment.publishDate | date : "short" }} </small></span>
+                  
+                </li>
               </div>
             </div>
           </div>
@@ -32,3 +65,4 @@
       </div>
     </div>
   </div>
+</section>
